# Flit
[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "hor2vec"
author = "Frank Jheng"
author-email = "m157q.tw@gmail.com"
home-page = "https://github.com/M157q/hor2vec"
description-file="README.md"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

[tool.flit.metadata.requires-extra]
test = [
    "coverage>=5.0a4",
    "coveralls>=1.11.0",
    "pytest>=4.6.11",
    "pytest-cov>=2.8.1",
    "flake8==3.8.3",
    "pytest-flake8==1.0.6",
    "tox>=3.14.0",
    "tox-pyenv==1.1.0",
]

[tool.flit.scripts]
hor2vec = "hor2vec.__main__:main"


# Tox
[tool.tox]
legacy_tox_ini = """

[tox]
isolated_build = True
skipsdist = true
envlist = py34,py35,py36,py37,py38

[testenv]
whitelist_externals = flit
commands =
    flit install --extras test --python {envpython}
    pytest -vv --flake8 --cov hor2vec/ --cov-report html --cov-report term --junitxml=test-reports/junit.xml --flake8
"""
